# MarkdownMaker

./: .gitattributes  .gitignore  Axq.pri  CMakeLists.txt  LICENSE  README.md  index.html  main.cpp  main.qml  markdownmaker.cpp  markdownmaker.h  mdmaker.pro  qml.qrc
html/: index.html  marked.js
releases/: MarkdownMaker-x86_64.AppImage  linuxdeploy.sh  macdeploy.sh  mdmaker.dmg  windeploy.sh
releases/MarkdownMaker-x86_64.AppDir/: MarkdownMaker.desktop
releases/MarkdownMaker-x86_64.AppDir/usr/share/applications/: MarkdownMaker.desktop
